# error-report-web-rs

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml  docker-compose.yml
.github/workflows/: ci.yml  simple.yml
migrations/: 001_initial.sql
src/: config.rs  lib.rs  main.rs
src/handlers/: admin.rs  api.rs  mod.rs  web.rs
src/models/: build_configuration.rs  error_report.rs  mod.rs
src/services/: stats.rs
src/utils/: validation.rs
static/css/: custom.css
templates/: admin_dashboard.html  base.html  error_detail.html  error_list.html  index.html  stats.html
test-data/: test-payload.json  test-send-error.py
tests/: integration_tests.rs
